--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <li><a href="main.html">Calender</a></li>
             <li><a href="journal.html">Journal</a></li>
             
-            <li><a href="main.html">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="AbtUs.html">AboutUs</a></li>
         </ul>
     </nav>
