--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="main.html">Calender</a></li>
             <li><a href="journal.html">Journal</a></li>
-            <li><a href="index.html">Blogs</a></li>
+            <li><a href="blog.html">Blogs</a></li>
             <li><a href="AbtUs.html">AboutUs</a></li>
           
         </ul>
